# openai-simple-client

./: .env  .gitignore  README.md  openai_api_web.py  pyproject.toml  requirements.txt
