[tool.poetry]
name = "OpenAI Simple Client"
version = "0.1.0"
description = "A simple chat client for OpenAI's GPT 3.5 and 4"
authors = ["Roger Kibbe <roger@thekibbes.com>"]
license = "Apache 2"  # or your preferred license

[tool.poetry.dependencies]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
